--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
+    "jest-cli": "^28.1.0",
     "mongoose": "^6.3.3",
     "mongoose-autopopulate": "^0.16.1",
     "morgan": "^1.10.0",
